# skpviz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  layer_trace.cpp  layer_trace.h  main.cpp  replay_trace.cpp
aosp/: CMakeLists.txt
aosp/arect/include/android/: rect.h
aosp/compositionengine/: CMakeLists.txt
aosp/compositionengine/include/compositionengine/: CompositionEngine.h  CompositionRefreshArgs.h  Display.h  DisplayColorProfile.h  DisplayColorProfileCreationArgs.h  DisplayCreationArgs.h  DisplaySurface.h  Feature.h  LayerFE.h  LayerFECompositionState.h  Output.h  OutputColorSetting.h  OutputLayer.h  ProjectionSpace.h  RenderSurface.h  RenderSurfaceCreationArgs.h
aosp/compositionengine/include/compositionengine/impl/: ClientCompositionRequestCache.h  CompositionEngine.h  Display.h  DisplayColorProfile.h  DumpHelpers.h  GpuCompositionResult.h  HwcAsyncWorker.h  HwcBufferCache.h  Output.h  OutputCompositionState.h  OutputLayer.h  OutputLayerCompositionState.h  RenderSurface.h
aosp/compositionengine/include/compositionengine/impl/planner/: CachedSet.h  Flattener.h  LayerState.h  Planner.h  Predictor.h  TexturePool.h
aosp/compositionengine/include/compositionengine/mock/: CompositionEngine.h  Display.h  DisplayColorProfile.h  DisplaySurface.h  LayerFE.h  NativeWindow.h  Output.h  OutputLayer.h  RenderSurface.h
aosp/compositionengine/src/: ClientCompositionRequestCache.cpp  CompositionEngine.cpp  Display.cpp  DisplayColorProfile.cpp  DisplaySurface.cpp  DumpHelpers.cpp  HwcAsyncWorker.cpp  HwcBufferCache.cpp  LayerFECompositionState.cpp  Output.cpp  OutputCompositionState.cpp  OutputLayer.cpp  OutputLayerCompositionState.cpp  RenderSurface.cpp
aosp/compositionengine/src/planner/: CachedSet.cpp  Flattener.cpp  LayerState.cpp  Planner.cpp  Predictor.cpp  TexturePool.cpp
aosp/ftl/include/ftl/: algorithm.h  cast.h  concat.h  enum.h  expected.h  fake_guard.h  flags.h  function.h  future.h  hash.h  initializer_list.h  match.h  mixins.h  non_null.h  optional.h  shared_mutex.h  small_map.h  small_vector.h  static_vector.h  string.h  unit.h
aosp/libbase/include/android-base/: chrono_utils.h  cmsg.h  collections.h  errno_restorer.h  errors.h  expected.h  file.h  format.h  function_ref.h  hex.h  logging.h  macros.h  mapped_file.h  memory.h  no_destructor.h  parsebool.h  parsedouble.h  parseint.h  parsenetaddress.h  process.h  properties.h  result-gmock.h  result.h  scopeguard.h  silent_death_test.h  stringprintf.h  strings.h  test_utils.h  thread_annotations.h  threads.h  unique_fd.h  utf8.h
aosp/libbase/src/: abi_compatibility.cpp  chrono_utils.cpp  errors_unix.cpp  file.cpp  hex.cpp  logging_splitters.h  mapped_file.cpp  parsebool.cpp  parsenetaddress.cpp  posix_strerror_r.cpp  process.cpp  properties.cpp  stringprintf.cpp  strings.cpp  threads.cpp
aosp/libmath/include/math/: HashCombine.h  TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  half.h  mat2.h  mat3.h  mat4.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
aosp/libui/include/ui/: ColorSpace.h  DeviceProductInfo.h  DisplayIdentification.h  DisplayMap.h  DisplayMode.h  DisplayState.h  DynamicDisplayInfo.h  FatVector.h  FenceTime.h  FloatRect.h  GraphicBuffer.h  GraphicTypes.h  HdrCapabilities.h  LayerStack.h  PixelFormat.h  Point.h  Rect.h  Region.h  RegionHelper.h  Rotation.h  Size.h  StaticDisplayInfo.h  Transform.h
aosp/libui/src/: ColorSpace.cpp  GraphicBuffer.cpp  PixelFormat.cpp  Rect.cpp  Region.cpp  Transform.cpp
aosp/libutils/include/utils/: AndroidThreads.h  BitSet.h  CallStack.h  Compat.h  Condition.h  Errors.h  ErrorsMacros.h  FastStrcmp.h  FileMap.h  Flattenable.h  Functor.h  JenkinsHash.h  KeyedVector.h  LightRefBase.h  List.h  Looper.h  LruCache.h  Mutex.h  NativeHandle.h  Printer.h  ProcessCallStack.h  RWLock.h  RefBase.h  Singleton.h  SortedVector.h  StopWatch.h  String16.h  String8.h  StrongPointer.h  SystemClock.h  Thread.h  ThreadDefs.h  Timers.h  Tokenizer.h  Trace.h  TypeHelpers.h  Unicode.h  Vector.h  VectorImpl.h  misc.h
aosp/libutils/src/: Errors.cpp  FileMap.cpp  JenkinsHash.cpp  LightRefBase.cpp  NativeHandle.cpp  Printer.cpp  RefBase.cpp  SharedBuffer.cpp  SharedBuffer.h  String16.cpp  String8.cpp  StrongPointer.cpp  SystemClock.cpp  Threads.cpp  Timers.cpp  Tokenizer.cpp  Trace.cpp  Unicode.cpp  VectorImpl.cpp  misc.cpp  native_handle.cpp
aosp/shim/include/: SurfaceFlingerProperties.sysprop.h  TracedOrdinal.h  com_android_graphics_libgui_flags.h
aosp/shim/include/DisplayHardware/: ComposerHal.h  HWC2.h  HWComposer.h  Hal.h
aosp/shim/include/PowerAdvisor/: PowerAdvisor.h
aosp/shim/include/TimeStats/: TimeStats.h
aosp/shim/include/aidl/android/hardware/graphics/common/: BufferUsage.h  DisplayDecorationSupport.h  HdrConversionCapability.h  HdrConversionStrategy.h
aosp/shim/include/aidl/android/hardware/graphics/composer3/: Capability.h  ClientTargetPropertyWithBrightness.h  Color.h  Composition.h  DisplayCapability.h  DisplayLuts.h  LutProperties.h  Luts.h  OutputType.h  OverlayProperties.h
aosp/shim/include/android/: binder_auto_utils.h  log.h  native_window.h
aosp/shim/include/android/gui/: CachingHint.h
aosp/shim/include/android/hardware/graphics/common/1.0/: types.h
aosp/shim/include/common/: FlagManager.h  trace.h
aosp/shim/include/cutils/: compiler.h  native_handle.h  properties.h  sched_policy.h  trace.h
aosp/shim/include/gui/: BufferQueue.h  DisplayLuts.h  HdrMetadata.h
aosp/shim/include/hardware/: hardware.h
aosp/shim/include/include/android/: GrAHardwareBufferUtils.h
aosp/shim/include/log/: log.h
aosp/shim/include/processgroup/: sched_policy.h
aosp/shim/include/scheduler/: FrameTargeter.h  Time.h
aosp/shim/include/scheduler/interface/: ICompositor.h
aosp/shim/include/sys/: prctl.h
aosp/shim/include/system/: graphics-base-v1.0.h  graphics-base-v1.1.h  graphics-base-v1.2.h  graphics-base.h  graphics-sw.h  graphics.h  thread_defs.h  window.h
src/: layer_trace.cpp  layer_trace.h  main.cpp  make_fake_trace.cpp  replay_diag.h  replay_trace.cpp
